fix body hidden/visible

--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -26,6 +26,7 @@
 
 body.menu--open{
     @media only screen and (max-width: 1024px){
+        overflow: hidden;
         .livechat-link{
             display: flex;
         }
